--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -15,7 +15,7 @@ $marginBlockWidth = 30.8%;
 
 white_block(br = 5px)
 	background #FFFFFF
-	box-shadow 0px 4px 15px 0px rgba(0,0,0,0.04)
+	box-shadow 0px 5px 15px 0px rgba(0,0,0,0.04)
 	border-radius br
 
 *
@@ -218,6 +218,10 @@ body
 
 .white-block
 	white_block()
+	transition all .2s
+	&:hover
+		box-shadow 0 12px 18px 5px rgba(0,0,0,.045)
+		transform translateY(-1px)
 
 .patterns
 	display flex
@@ -279,7 +283,7 @@ body
 
 	&__pattern-input
 		cursor pointer
-		
+
 		input
 			cursor pointer
 
@@ -321,7 +325,7 @@ body
 				opacity 0.8
 
 		b
-			font-weight 700
+			font-weight 600
 
 	&__content
 		padding $padding
